--- a/src/app/modules/dashboard/navbar/navbar.component.html
+++ b/src/app/modules/dashboard/navbar/navbar.component.html
@@ -1,45 +1,48 @@
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <!-- Container wrapper -->
-    <div class="container-fluid">
-      <!-- Navbar brand -->
-      <a class="navbar-brand" href="#">Brand</a>
-  
-      <!-- Toggle button -->
-      <button
-        class="navbar-toggler"
-        type="button"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <i class="fas fa-bars"></i>
+<mat-toolbar>
+
+  <span>SACAS</span>
+  <span style="flex: 1 1 auto;"></span>
+
+  <span  *ngIf="user as user">
+    <a class="nav-link active" aria-current="page" > {{(user.displayName)}}</a>
+  </span>
+  <button mat-icon-button [matMenuTriggerFor]="menu" class="example-icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+
+    <button mat-menu-item [matMenuTriggerFor]="SuperAdmin">
+      <mat-icon>lock</mat-icon>
+      <span>SuperAdmin</span>
+    </button>
+
+
+    <mat-menu #SuperAdmin="matMenu">
+      <button mat-menu-item (click)="goTo('organizations')">
+        <mat-icon>lock</mat-icon>
+        <span>Organizacion | Admin</span>
       </button>
   
-      <!-- Collapsible wrapper -->
-      <div
-        class="collapse navbar-collapse"
-        id="navbarSupportedContent"
-        mdbCollapse
-        *ngIf="authService.userData as user"
-      >
-        <!-- Left links -->
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" > {{(user.email)}}</a>
-          </li>
-          <li class="nav-item">
-            <button class="nav-link" (click)="authService.SignOut()">
-              <i class="fas fa-sign-out-alt"></i>Log out
-            </button>
-          </li>
-        </ul>
-        <!-- Left links -->
-  
-        <!-- Search form -->
-        
-      </div>
-      <!-- Collapsible wrapper -->
-    </div>
-    <!-- Container wrapper -->
-  </nav>
-  <!-- Navbar -->
+      <button mat-menu-item (click)="goTo('users')">
+        <mat-icon>lock</mat-icon>
+        <span>Usuarios | Admin</span>
+      </button>
+    </mat-menu>
+
+    <hr>
+
+    <button mat-menu-item (click)="goTo('admin-org')">
+      <mat-icon>business_center</mat-icon>
+      <span>Administrator</span>
+    </button>
+    
+    <hr>
+
+    <button mat-menu-item (click)="LogOut()">
+      <mat-icon>power_settings_new</mat-icon>
+      <span>Cerrar Sesión</span>
+    </button>
+
+  </mat-menu>
+
+</mat-toolbar>
