--- a/src/app/modules/dashboard/admin-ticket/admin-ticket.component.html
+++ b/src/app/modules/dashboard/admin-ticket/admin-ticket.component.html
@@ -173,9 +173,8 @@
                                     <th mat-header-cell *matHeaderCellDef> Estado </th>
                                     <td mat-cell *matCellDef="let ticket"> 
                                         <mat-chip-list aria-label="Status">
-                                            <mat-chip color="warn" selected>{{ticket.status}}    
-                                        </mat-chip>
-                                    </mat-chip-list>
+                                            <mat-chip color="warn" selected>{{ticket.status}}</mat-chip>
+                                        </mat-chip-list>
                                      </td>
                                 </ng-container>
                                 <ng-container matColumnDef="Acciones">
