--- a/src/app/modules/dashboard/home/home.component.html
+++ b/src/app/modules/dashboard/home/home.component.html
@@ -1,12 +1,29 @@
+<mat-toolbar>
+    <span>Home</span>
+<!--
+    <button mat-button disabled="true"> Buscar </button>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Prueba" #input>
+-->
+</mat-toolbar>
 
-<div class="container mt-5">
-        <mat-card  *ngFor="let organization of organizationList">
-            <mat-card-title>{{organization.name}}</mat-card-title>
-            <mat-card-content>
-                <p>This card has divider and indeterminate progress as footer</p>
-            </mat-card-content>
-            <mat-card-actions>
-                <button mat-button (click)="goTo(organization.id)">Visitar</button>
-              </mat-card-actions>
-        </mat-card>
+<div style="padding: 16px;"> 
+    <div fxLayout="row wrap" fxLayoutGap="16px grid">
+        <div class="container mt-5">
+            <mat-grid-list cols="2" rowHeight="150px" >
+                <mat-grid-tile *ngFor="let organization of organizationList" >
+                <mat-card style="margin-bottom: 16px;width: 75%;"  >
+                    <mat-card-title>{{organization.name}}</mat-card-title>
+                    <mat-card-content>
+                        <p>Prueba Card</p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                        <button mat-button (click)="goTo(organization.id)">Visitar</button>
+                    </mat-card-actions>
+                </mat-card>
+                </mat-grid-tile>
+            </mat-grid-list>
+        </div>
+    </div>
 </div>
+
+
